force-app/main/default/objects/Purchase_Line_Item__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <displayFormat>T-{0000}</displayFormat>
    <label>Line_Number</label>
    <type>AutoNumber</type>
</CustomField>