force-app/main/default/objects/Purchase_Line_Item__c/fields/Purchase_Order_1__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_1__c</fullName>
    <description>Purchase Order relationship</description>
    <inlineHelpText>Related to purchase order 1.</inlineHelpText>
    <label>Purchase Order 1</label>
    <referenceTo>Purchase_Order_1__c</referenceTo>
    <relationshipLabel>Products #2</relationshipLabel>
    <relationshipName>Products_2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>