force-app/main/default/objects/Purchase_Line_Item__c/validationRules/Qty_times_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_times_Price</fullName>
    <active>false</active>
    <description>Quantity times price</description>
    <errorConditionFormula>$Setup.TSGADX__ADX_Settings__c.TSGADX__Validation_Rules__c &amp;&amp;(Total_Price__c  * Quantity__c) &lt;&gt;  Total_Price__c</errorConditionFormula>
    <errorMessage>Your qty x price does not equal the total price.</errorMessage>
</ValidationRule>